Fix RA icon display on mobiles

--- a/my-theme/static/stylesheet/style.less
+++ b/my-theme/static/stylesheet/style.less
@@ -108,7 +108,8 @@ aside {
   }
 
   div {
-    padding: 20px;
+    //padding: 20px;
+    padding: 36px 18px;
     margin: 0;
 
     img {
@@ -404,21 +405,21 @@ ul.social {
 
   a {
     display: inline-block;
-    width: 40px;
-    height: 40px;
+    width: 100%;
+    height: 100%;
     img {
       display: block;
       margin-left: auto;
       margin-right: auto;
-      margin-top: 14px;
+      margin-top: 16px;
+      margin-bottom: 16px;
       border-radius: 0;
       width: 60%;
     }
-    width: 100%;
     border-radius: 100%;
     text-align: center;
     font-size: .8em;
-    line-height: 40px;
+    line-height: 44px;
 
   }
 
@@ -526,7 +527,7 @@ ul.social {
   aside {
 
     div {
-      padding: 36px 18px;
+      //padding: 36px 18px;
 
       nav {
         ul {
@@ -537,9 +538,6 @@ ul.social {
         }
       }
 
-      ul.social {
-        padding-top: 32px;
-      }
     }
   }
 
